@@ -2,6 +2,8 @@ Revision history for Dist-Zilla-Plugin-RewriteVersion-Transitional
 
 {{$NEXT}}
           - now logging the number of version statements that were replaced
+          - fix the name of the fallback version provider plugin used in
+            [BumpVersionAfterRelease::Transitional] (shows up in log messages)
 
 0.004     2015-01-19 03:49:55Z
           - avoid dying if [OurPkgVersion] is not installed
